--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "12.2.3",
+    "pexels": "^1.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.0.7",
