--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "next": "12.2.3",
     "pexels": "^1.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-switch": "^7.0.0",
     "react-toastify": "^9.0.7",
     "styled-components": "^5.3.5"
   },
