--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,5 @@
     "incremental": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"],
-  "files": ["src/styles"]
+  "exclude": ["node_modules"]
 }
