--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "pexels": "^1.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-switch": "^7.0.0",
+    "react-lottie": "^1.2.3",
     "react-toastify": "^9.0.7",
     "styled-components": "^5.3.5"
   },
@@ -22,6 +22,7 @@
     "@types/node": "18.6.2",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/react-lottie": "^1.2.6",
     "@types/styled-components": "^5.1.25",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
